fix: wrap examples for narrow screens

--- a/public/global.css
+++ b/public/global.css
@@ -289,8 +289,15 @@ figcaption {
 
 /* render-examples in util.typ */
 .example {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 1em;
+}
+.example > * {
+  flex: auto;
+}
+.example > pre {
+  overflow-x: auto;
 }
 .example > .preview {
   border-radius: 8px;
